--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" contents="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Pasha's CV </title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
