feat: add requirements for layout

--- a/index.html
+++ b/index.html
@@ -6,51 +6,70 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Pasha's CV </title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
   <body>
     <div class="wrapper">
       <header>
-        <div class="contain">
+        <div class="wrap">
           <img id="photo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSDSZ_v4Is1N76sZCQMKO65USIRbPyIQO9JUg&usqp=CAU" alt="Not my photo:)">
           <h1 id="center-name">Shukan Pavel</h1>
-          <div id="center-undername">Student RSS</div>
+          <p id="center-undername">Student RSS</p>
         </div>
       </header> 
       <hr>
-      <section class="main-content layout-2column">
-        <div class="information-content">
-          <h2 id="information">Information</h2>
-          <div>
-            <span class="bold-text">Name:</span> 
-            Shukan Pavel Vasilievich
-          </div>
-          <div>
+      <main>
+        <div class="wrap layout-2column">
+          <ul class="information-content">
+            <li>
+              <h2 id="information">Information</h2>
+            </li>
+            <li>
+              <div>
+              <span class="bold-text">Name:</span> 
+              Shukan Pavel Vasilievich
+            </div>
+          </li>
+          <li>
+            <div>
               <span class="bold-text">Contacts:</span> 
               +375297688891 (viber, <a href="https://t.me/fraterpavlo"> telegram </a>); shukan1999@mail.ru
-          </div>
-          <div>
+            </div>
+          </li>
+          <li>
+            <div>
               <span class="bold-text">Education:</span> 
               graduated from the <a href="https://mgpk.bntu.by/"> Minsk State     Polytechnic College</a>, and now I'm studying at <a href="https://www.bsuir.by"> Belarusian State University of Informatics and Radioelectronics </a>.
+            </div>
+          </li>
+          </ul>
+          <div class="about-me-content">
+            <h2 id=about-me>About me</h2>
+            <div>
+              I am 22 years old, I am a young, positive guy, open to everything new and interesting. 
+              Now I want to try myself in a new field for me - the IT-field. 
+              I don't have that kind of work experience right now, but I'll try to change that.
+            </div>
+            <div>
+              Now I study HTML, CSS, JS git-services only at a basic level, but I am constantly developing and learning something new.
+            </div>  
+            <div>
+              My knowledge of English is at a low level, they are limited to studying English at school. I can communicate in English, but it's hard for me.
+            </div>
           </div>
         </div>
-        <div class="about-me-content">
-          <h2 id=about-me>About me</h2>
-          <div>
-            I am 22 years old, I am a young, positive guy, open to everything new and interesting. 
-            Now I want to try myself in a new field for me - the IT-field. 
-            I don't have that kind of work experience right now, but I'll try to change that.
+      </main>
+      <footer>
+        <div class="wrap">
+          <div class="footer-logo">
+            <a href="https://rs.school/js/">
+              <img src="https://rs.school/images/rs_school_js.svg" alt="RS-logo">
+            </a>
           </div>
-          <div>
-            Now I study HTML, CSS, JS git-services only at a basic level, but I am constantly developing and learning something new.
-          </div>  
-          <div>
-            My knowledge of English is at a low level, they are limited to studying English at school. I can communicate in English, but it's hard for me.
-          </div>
+          <div id="footer-year">2021</div>
         </div>
-      </section>
+      </footer>
     </div>
   </body>
-
-
 </html>
