--- a/index.html
+++ b/index.html
@@ -7,70 +7,194 @@
   <title> Pasha's CV </title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300;1,500;1,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </head>
   <body>
     <div class="wrapper">
       <header>
-        <div class="wrap">
-          <img id="photo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSDSZ_v4Is1N76sZCQMKO65USIRbPyIQO9JUg&usqp=CAU" alt="Not my photo:)">
-          <h1 id="center-name">Shukan Pavel</h1>
-          <p id="center-undername">Student RSS</p>
+        <div class="header wrap">
+          <img class="header__photo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSDSZ_v4Is1N76sZCQMKO65USIRbPyIQO9JUg&usqp=CAU" alt="Not my photo:)">
+          <h1 class="center-name">Shukan Pavel</h1>
+          <p class="center-undername">Student RSS</p>
         </div>
       </header> 
-      <hr>
-      <main>
+      <hr class="hr">
+      <main class="main-page">
         <div class="wrap layout-2column">
-          <ul class="information-content">
-            <li>
-              <h2 id="information">Information</h2>
-            </li>
-            <li>
-              <div>
-              <span class="bold-text">Name:</span> 
-              Shukan Pavel Vasilievich
-            </div>
-          </li>
-          <li>
-            <div>
-              <span class="bold-text">Contacts:</span> 
-              +375297688891 (viber, <a href="https://t.me/fraterpavlo"> telegram </a>); shukan1999@mail.ru
-            </div>
-          </li>
-          <li>
-            <div>
-              <span class="bold-text">Education:</span> 
-              graduated from the <a href="https://mgpk.bntu.by/"> Minsk State     Polytechnic College</a>, and now I'm studying at <a href="https://www.bsuir.by"> Belarusian State University of Informatics and Radioelectronics </a>.
-            </div>
-          </li>
-          </ul>
+          <div class="information-content">
+            <h3 class="h3 information-content__tittle">Information</h3>
+            <ul class="information-content__list">
+              <li class="information-content__item">
+                <span class="bold-text">Name:</span> 
+                Shukan Pavel Vasilievich
+              </li>
+              <li class="information-content__item">
+                <span class="bold-text">Contacts:</span> 
+                +375297688891 (viber, <a href="https://t.me/fraterpavlo"> telegram </a>); shukan1999@mail.ru
+              </li>
+              <li class="information-content__item">
+                <span class="bold-text">Education:</span> 
+                graduated from the <a href="https://mgpk.bntu.by/"> Minsk State     Polytechnic College</a>, and now I'm studying at <a href="https://www.bsuir.by"> Belarusian State University of Informatics and Radioelectronics </a>.
+              </li>
+            </ul>
+          </div>
           <div class="about-me-content">
-            <h2 id=about-me>About me</h2>
-            <div>
+            <h3 class="h3 about-me-content__tittle">About me</h3>
+            <p class="about-me__text">
               I am 22 years old, I am a young, positive guy, open to everything new and interesting. 
               Now I want to try myself in a new field for me - the IT-field. 
               I don't have that kind of work experience right now, but I'll try to change that.
-            </div>
-            <div>
+            </p>
+            <p class="about-me__text">
               Now I study HTML, CSS, JS git-services only at a basic level, but I am constantly developing and learning something new.
-            </div>  
-            <div>
+            </p>  
+            <p class="about-me__text">
               My knowledge of English is at a low level, they are limited to studying English at school. I can communicate in English, but it's hard for me.
-            </div>
+            </p>
           </div>
         </div>
+        <a href="" class="wave-btn">
+          <span class="wave-btn__text">Show More</span>
+          <span class="wave-btn__waves"></span>
+        </a>
       </main>
-      <footer>
-        <div class="wrap">
-          <div class="footer-logo">
-            <a href="https://rs.school/js/">
-              <img src="https://rs.school/images/rs_school_js.svg" alt="RS-logo">
+      <section class="more-page">
+        <section class="wrap more-page__navigation">
+          <nav class="navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item"><a href="" class="navigation__link">Skills</a></li>
+              <li class="navigation__item"><a href="" class="navigation__link">Projects</a></li>
+              <li class="navigation__item"><a href="" class="navigation__link">Code</a></li>
+              <li class="navigation__item"><a href="" class="navigation__link">Languages</a></li>
+              <li class="navigation__item"><a href="" class="navigation__link">Video</a></li>
+              <!-- <li class="navigation__item"><a href="" class="navigation__link">Contacts</a></li> -->
+            </ul>
+          </nav>
+        </section>
+        <section class="wrap more-page__skills">
+          <h2 class="more-page__skills__tittle h2-tittle">skills</h2>
+          <ul class="more-page__skills__list skills-list">
+            <li class="skills-list__item">HTML <hr class="skills-list__hr hr_html"></li>
+            <li class="skills-list__item">CSS <hr class="skills-list__hr hr_css"></li>
+            <li class="skills-list__item">JS <hr class="skills-list__hr hr_js"></li>
+            <li class="skills-list__item">Figma <hr class="skills-list__hr hr_figma"></li>
+            <li class="skills-list__item">Git <hr class="skills-list__hr hr_git"></li>
+            <li class="skills-list__item">Markdown <hr class="skills-list__hr hr_markdown"></li>
+          </ul>
+        </section>
+        <section class="wrap more-page__projects">
+          <h2 class="more-page__projects__tittle h2-tittle">projects</h2>
+          <div class="more-page__projects__cards cards layout-2column">
+            <a href="https://rolling-scopes-school.github.io/fraterpavlo-JSFEPRESCHOOL/museum/" class="cards__item card">
+              <img class="card__photo" src="./assert/img/museum.png" alt="">
+              <p class="card__tittle">Museum</p>
+              <p class="card__tags">html css</p>
+              <p class="card__description"></p>
+            </a>
+            <a href="https://rolling-scopes-school.github.io/fraterpavlo-JSFEPRESCHOOL/vertical-slider/" class="cards__item card">
+              <img src="./assert/img/slider.png" alt="" class="card__photo">
+              <p class="card__tittle">Vertical Slider</p>
+              <p class="card__tags">html css js</p>
+              <p class="card__description"></p>
+            </a>
+            <a href="https://quirky-mestorf-46bd6a.netlify.app/" class="cards__item card">
+              <img src="./assert/img/virtual-piano.png" alt="" class="card__photo">
+              <p class="card__tittle">Virtual Piano</p>
+              <p class="card__tags">html css js</p>
+              <p class="card__description"></p>
+            </a>
+            <a href="https://rolling-scopes-school.github.io/fraterpavlo-JSFEPRESCHOOL/whack-a-mole/" class="cards__item card">
+              <img src="./assert/img/whack-a-mole.png" alt="" class="card__photo">
+              <p class="card__tittle">Whack a Mole</p>
+              <p class="card__tags">html css js</p>
+              <p class="card__description"></p>
+            </a>
+            <a href="https://rolling-scopes-school.github.io/fraterpavlo-JSFE2021Q1/wildlife/" class="cards__item card">
+              <img src="./assert/img/wild-life.png" alt="" class="card__photo">
+              <p class="card__tittle">Wild Life</p>
+              <p class="card__tags">html css</p>
+              <p class="card__description"></p>
+            </a>
+            <a href="https://rolling-scopes-school.github.io/fraterpavlo-JSFE2021Q1/online-zoo/" class="cards__item card">
+              <img src="./assert/img/zoo.png" alt="" class="card__photo">
+              <p class="card__tittle">Online Zoo</p>
+              <p class="card__tags">html css</p>
+              <p class="card__description"></p>
             </a>
           </div>
-          <div id="footer-year">2021</div>
-        </div>
-      </footer>
+        </section>
+        <section class="wrap more-page__code">
+          <h2 class="more-page__code__tittle h2-tittle">code</h2>
+          <pre><code class="javascript">
+            function check(str, bracketsConfig) {
+              let stack = [];
+              let map = new Map(bracketsConfig);
+          
+              for (i = 0; i < str.length; ++i) {
+                let currentBracket = str[i]; 
+                let lastBracketInStack = stack[stack.length - 1];
+                let pairForLastOpenBracket = map.get(lastBracketInStack);
+                if (map.has(currentBracket)) {
+                  if (currentBracket == pairForLastOpenBracket) {
+                    stack.pop();
+                  } else {
+                    stack.push(currentBracket);
+                  }
+                } else {
+                  if (stack.length === 0) {
+                    return false;
+                  } else {
+                    if (currentBracket === pairForLastOpenBracket) {
+                        stack.pop();
+                    } else {
+                      return false;
+                    }
+                  }
+                }
+              }
+              return stack.length === 0;
+            }
+          </code></pre>
+        </section>
+        <section class="wrap more-page__languages">
+          <h2 class="more-page__languages__tittle h2-tittle">languages</h2>
+          <p class="more-page__languages__text">
+            I speak two languages fluently - Russian and Belarusian. my English level is about B1. I find it difficult to conduct a dialogue in English, although I can do it.
+          </p>
+        </section>
+        <section class="wrap more-page__video">
+          <h2 class="more-page__video__tittle h2-tittle">video</h2>
+          <p class="more-page__video__text">
+            Yes, I did not record a video presentation. I'll do it later, but for now, here's a cat :)
+          </p>
+          <div class="more-page__video__video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/uXnLyUZYkVw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </section>
+        <!-- <section class="wrap more-page__contacts">
+          <h2 class="more-page__contacts__tittle h2-tittle">contacts</h2>
+
+        </section> -->
+      </section>
     </div>
+    <footer class="footer">
+      <div class="wrap layout-3column">
+        <div class="footer-logo">
+          <a href="https://rs.school/js/">
+            <img src="https://rs.school/images/rs_school_js.svg" alt="RS-logo">
+          </a>
+        </div>
+        <div class="footer-github">
+          <a href="https://github.com/fraterpavlo" class="footer-github__link"></a>
+        </div>
+        <div class="footer-year">2021</div>
+      </div>
+    </footer>
   </body>
 </html>
 
