--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
       <section class="more-page none">
         <section class="wrap more-page__navigation">
           <nav class="navigation">
+            <div class="burger-menu">
+              <input id="menu-toggle" type="checkbox" />
+              <label class="menu-btn" for="menu-toggle">
+                <span></span>
+              </label>
+              <ul class="menubox">
+                      <li><a class="menu-item" href="#skills">Skills</a></li>
+                      <li><a class="menu-item" href="#projects">Projects</a></li>
+                      <li><a class="menu-item" href="#code">Code</a></li>
+                      <li><a class="menu-item" href="#languages">Languages</a></li>
+                      <li><a class="menu-item" href="#video">Video</a></li>
+              </ul>
+            </div>
             <ul class="navigation__list">
               <li class="navigation__item"><a href="#skills" class="navigation__link">Skills</a></li>
               <li class="navigation__item"><a href="#projects" class="navigation__link">Projects</a></li>
