--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         </a>
       </main>
       <section class="more-page none">
+        <h2 class="h2-none" style="display: none;"></h2>
         <section class="wrap more-page__navigation">
+          <h2 class="h2-none" style="display: none;"></h2>
           <nav class="navigation">
             <div class="burger-menu">
               <input id="menu-toggle" type="checkbox" />
@@ -148,7 +150,7 @@
               let stack = [];
               let map = new Map(bracketsConfig);
           
-              for (i = 0; i < str.length; ++i) {
+              for (i = 0; i &lt; str.length; ++i) {
                 let currentBracket = str[i]; 
                 let lastBracketInStack = stack[stack.length - 1];
                 let pairForLastOpenBracket = map.get(lastBracketInStack);
